--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,6 @@
     "angular-mocks": "1.4.x",
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
-    "angular-route": "^1.4.9"
+    "angular-ui-router": "~0.2.17"
   }
 }
