--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,5 @@
 {
-  "name": "angular-phonecat",
-  "description": "A starter project for AngularJS",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-phonecat",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -10,6 +7,7 @@
     "angular-mocks": "1.4.x",
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
-    "angular-ui-router": "~0.2.17"
+    "angular-ui-router": "~0.2.17",
+    "angular-local-storage": "^0.2.3"
   }
 }
