--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Ceate an angular application",
   "license": "MIT",
   "devDependencies": {
+    "bower": "^1.3.1",
     "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "~0.1.0",
-    "protractor": "^2.1.0",
-    "bower": "^1.3.1"
+    "protractor": "^2.1.0"
   },
   "scripts": {
-    "postinstall": "bower install"
-    }
+    "postinstall": "bower install",
+    "test": "node node_modules/karma/bin/karma start tests/karma.config.js"
+  }
 }
