--- a/bower.json
+++ b/bower.json
@@ -1,13 +1,16 @@
 {
   "version": "0.0.0",
+  "name": "CDP_task_todo_list",
   "license": "MIT",
   "private": true,
   "dependencies": {
     "angular": "1.4.x",
-    "angular-mocks": "1.4.x",
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
     "angular-ui-router": "~0.2.17",
     "angular-local-storage": "^0.2.3"
+  },
+  "devDependencies": {
+    "angular-mocks": "1.4.x"
   }
 }
