--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "name": "CDP_task_todo_list",
   "description": "Ceate an angular application",
   "license": "MIT",
+  "dependencies": {
+    "bower": "^1.3.1"
+  },
   "devDependencies": {
-    "bower": "^1.3.1",
+    "jasmine-core": "^2.4.1",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.2.2",
     "karma-jasmine": "~0.1.0",
